--- a/TODO
+++ b/TODO
@@ -2,3 +2,12 @@
 отладить pin_hal для stm32f0
 закончить SPI_ral
 написать SPImaster с DMA
+переписать в DMA битбендинг с макросов на констекспр
+отладить DMA для STM32F0
+
+в adc_ral использовать std::is_same
+
+работал в вс 8 часов
+          пн 3 часа
+          ср 2 часа
+          сб 3 часа
