--- a/TODO
+++ b/TODO
@@ -4,6 +4,7 @@
 написать SPImaster с DMA
 переписать в DMA битбендинг с макросов на констекспр
 отладить DMA для STM32F0
+отладить spi_hal
 
 в adc_ral использовать std::is_same
 
