--- a/TODO
+++ b/TODO
@@ -5,6 +5,7 @@
 переписать в DMA битбендинг с макросов на констекспр
 отладить DMA для STM32F0
 отладить spi_hal
+отладить zoomer
 
 в adc_ral использовать std::is_same
 
@@ -12,3 +13,4 @@
           пн 3 часа
           ср 2 часа
           сб 3 часа
+          вт 5 часов
