--- a/TODO
+++ b/TODO
@@ -5,12 +5,14 @@
 переписать в DMA битбендинг с макросов на констекспр
 отладить DMA для STM32F0
 отладить spi_hal
-отладить zoomer
+отладить zoomer и tim для STM32F0
 
-в adc_ral использовать std::is_same
+в adc_ral использовать std::is_same по аналогии с TIM
 
 работал в вс 8 часов
           пн 3 часа
           ср 2 часа
           сб 3 часа
           вт 5 часов
+          чт 3 часа
+          пт 8 часов
