--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@
 отладить DMA для STM32F0
 отладить spi_hal
 отладить zoomer и tim для STM32F0
+отладить buttons
 
 в adc_ral использовать std::is_same по аналогии с TIM
 
@@ -15,4 +16,4 @@
           сб 3 часа
           вт 5 часов
           чт 3 часа
-          пт 8 часов
+          пт 10 часов
