--- a/TODO
+++ b/TODO
@@ -12,4 +12,6 @@
 
 flash_hal переделать так, чтобы можно было сохранять в несколько страниц
 
+попробовать разнести (а надо ли?) реализацию методов от их объявления
+
 
