--- a/TODO
+++ b/TODO
@@ -14,4 +14,6 @@ flash_hal переделать так, чтобы можно было сохра
 
 попробовать разнести (а надо ли?) реализацию методов от их объявления
 
+отладка, inputCounter для 4 серии
+
 
