--- a/TODO
+++ b/TODO
@@ -9,7 +9,8 @@
 [done] отладить buttons
 [done] в adc_ral использовать std::is_same по аналогии с TIM
 flash_hal переделать так, чтобы можно было сохранять в несколько страниц
-попробовать разнести (а надо ли?) реализацию методов от их объявления
+разнести реализацию методов от их объявления
 отладка, inputCounter для 4 серии
+encoder задать правильный static_assert
 
 
