--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 [done] отладить pin_hal для stm32f0
 [done] закончить SPI_ral
 [done] написать SPImaster с DMA
-переписать в DMA битбендинг с макросов на констекспр
+[done] переписать в DMA битбендинг с макросов на констекспр
 [done] отладить DMA для STM32F0
 [done] отладить spi_hal
 [done] отладить zoomer и tim для STM32F0
@@ -11,6 +11,6 @@
 flash_hal переделать так, чтобы можно было сохранять в несколько страниц
 разнести реализацию методов от их объявления
 отладка, inputCounter для 4 серии
-encoder задать правильный static_assert
-
+[done] encoder задать правильный static_assert
+переработать вызовы в начале бесконечного цикла в подписку к таймеру
 
