--- a/TODO
+++ b/TODO
@@ -9,8 +9,8 @@
 [done] отладить buttons
 [done] в adc_ral использовать std::is_same по аналогии с TIM
 flash_hal переделать так, чтобы можно было сохранять в несколько страниц
-разнести реализацию методов от их объявления
-отладка, inputCounter для 4 серии
+[done] разнести реализацию методов от их объявления
+[done] отладка, inputCounter для 4 серии
 [done] encoder задать правильный static_assert
-переработать вызовы в начале бесконечного цикла в подписку к таймеру
+[done] переработать вызовы в начале бесконечного цикла в подписку к таймеру
 
