--- a/TODO
+++ b/TODO
@@ -13,4 +13,7 @@ flash_hal переделать так, чтобы можно было сохра
 [done] отладка, inputCounter для 4 серии
 [done] encoder задать правильный static_assert
 [done] переработать вызовы в начале бесконечного цикла в подписку к таймеру
-
+сделать возможность изменять время между тиками, сейчас фиксированно 1 мс
+в USART избавится от дма в параметрах шаблона
+в spi разобраться с буффером, без него не работало
+избавится от system файлов, они не нужны
