--- a/TODO
+++ b/TODO
@@ -17,3 +17,6 @@ flash_hal переделать так, чтобы можно было сохра
 в USART избавится от дма в параметрах шаблона
 в spi разобраться с буффером, без него не работало
 избавится от system файлов, они не нужны
+сброс флагов прерываний перенёс в клас прерывания (убрать в остальных классах)
+постепенно переходить на дефайны STM32F0 STM32F4
+
