--- a/TODO
+++ b/TODO
@@ -19,4 +19,16 @@ flash_hal переделать так, чтобы можно было сохра
 избавится от system файлов, они не нужны
 сброс флагов прерываний перенёс в клас прерывания (убрать в остальных классах)
 постепенно переходить на дефайны STM32F0 STM32F4
+переводить всю переферию на автотестирование как adc_periph
+   [done] adc
+   dma
+   dma_stream
+   flash
+   gpio
+   rcc
+   spi
+   systick
+   tim
+   usart
+при рефакторинге избавляться от заглавных букв в именах файлов (см adc_periph)
 
